--- a/css6/css6.html
+++ b/css6/css6.html
@@ -8,117 +8,106 @@
     <link rel="stylesheet" type="text/css" href="css6.css">
 </head>
 <body>
-        <header>
-                <button type="button" class="guzhu">找雇主</button>
-                <button type="button" class="hugong">找护工</button>
-                <a class="top-right" href="www.xxxxx.com"></a>  
-            </header>
-            <main>
-                <div class="box">
-                    <div class="dropdown">
-                        <span>所在地
-                            <span class="sjx"></span>
-                        </span>
-                        <ul class="dropdown-content">
-                            <li class="li">北京</li>
-                            <li class="li">上海</li>
-                            <li class="li">苏州</li>
-                        </ul>
-                    </div>
-                    <div class="dropdown">
-                        <span>食宿
-                            <span class="sjx"></span>
-                        </span>
-                        <ul class="dropdown-content">
-                            <li class="li">一日一餐</li>
-                            <li class="li">一日两餐</li>
-                            <li class="li">一日三餐</li>
-                        </ul>
-                    </div>
-                    <div class="dropdown">
-                        <span>病人情况
-                            <span class="sjx"></span>
-                        </span>
-                        <ul class="dropdown-content">
-                            <li class="li">能自理</li>
-                            <li class="li">不能自理</li>
-                            <li class="li">手术后</li>
-                        </ul>
-                    </div>
-                </div>
-                <ul>
-                    <li class="main-box">
-                        <span class="date">服务日期</span>
-                        <div class="main-div">
-                            <span class="left">2018-6-12至2018-3-22</span>
-                            <span class="right">25元/小时
-                                <a class="getback"></a>
-                            </span>
-                        </div>
-                        <span class="location">北京.通州.果园</span>
-                    </li>
-                    <li class="main-box">
-                        <span class="date">服务日期</span>
-                        <div class="main-div">
-                            <span class="left">2018-6-12至2018-3-22</span>
-                            <span class="right">25元/小时
-                                <a class="getback"></a>
-                            </span>
-                        </div>
-                        <span class="location">北京.通州.果园</span>
-                    </li>
-                    <li class="main-box">
-                        <span class="date">服务日期</span>
-                        <div class="main-div">
-                            <span class="left">2018-6-12至2018-3-22</span>
-                            <span class="right">25元/小时
-                                <a class="getback"></a>
-                            </span>
-                        </div>
-                        <span class="location">北京.通州.果园</span>
-                    </li>
-                    <li class="main-box">
-                        <span class="date">服务日期</span>
-                        <div class="main-div">
-                            <span class="left">2018-6-12至2018-3-22</span>
-                            <span class="right">25元/小时
-                                <a class="getback"></a>
-                            </span>
-                        </div>
-                        <span class="location">北京.通州.果园</span>
-                    </li>
-                    <li class="main-box">
-                        <span class="date">服务日期</span>
-                        <div class="main-div">
-                            <span class="left">2018-6-12至2018-3-22</span>
-                            <span class="right">25元/小时
-                                <a class="getback"></a>
-                            </span>
-                        </div>
-                        <span class="location">北京.通州.果园</span>
-                    </li>
-                    <li class="main-box">
-                        <span class="date">服务日期</span>
-                        <div class="main-div">
-                            <span class="left">2018-6-12至2018-3-22</span>
-                            <span class="right">25元/小时
-                                <a class="getback"></a>
-                            </span>
-                        </div>
-                        <span class="location">北京.通州.果园</span>
-                    </li>
+    <header>
+        <button type="button" class="guzhu">找雇主</button>
+        <button type="button" class="hugong">找护工</button>
+        <a class="top-right" href="www.xxxxx.com"></a>  
+    </header>
+    <main>
+        <nav class="box">
+            <nav class="dropdown">
+                <p class="sjx">所在地</p>
+                <ul class="dropdown-content">
+                    <li class="color">北京</li>
+                    <li class="color">上海</li>
+                    <li class="color">苏州</li>
                 </ul>
-            </main>
-            <footer>
-                <button type="button" class="footer-left">
-                    <p class="font-left">首页</p>
-                </button>
-                <button type="button" class="footer-center">
-                    <p class="content-center"></p>
-                </button>
-                <button type="button" class="footer-right">
-                    <p class="font-right">我的</p>
-                </button>
-            </footer>
+            </nav>
+            <nav class="dropdown">
+                <p class="sjx">食宿</p>
+                <ul class="dropdown-content">
+                    <li class="color">一日一餐</li>
+                    <li class="color">一日两餐</li>
+                    <li class="color">一日三餐</li>
+                </ul>
+            </nav>
+            <nav class="dropdown">
+                <p class="sjx">病人情况</p>
+                <ul class="dropdown-content">
+                    <li class="color">能自理</li>
+                    <li class="color">不能自理</li>
+                    <li class="color">手术后</li>
+                </ul>
+            </nav>
+        </nav>
+        <ul>
+            <li class="main-box">
+                <span class="date">服务日期</span>
+                <div class="main-div">
+                    <span class="left">2018-6-12至2018-3-22</span>
+                    <span class="right getback">25元/小时</span>
+                </div>
+                <span class="location">北京.通州.果园</span>
+            </li>
+            <li class="main-box">
+                <span class="date">服务日期</span>
+                <div class="main-div">
+                    <span class="left">2018-6-12至2018-3-22</span>
+                    <span class="right getback">25元/小时</span>
+                </div>
+                <span class="location">北京.通州.果园</span>
+            </li>
+            <li class="main-box">
+                <span class="date">服务日期</span>
+                <div class="main-div">
+                    <span class="left">2018-6-12至2018-3-22</span>
+                    <span class="right getback">25元/小时</span>
+                </div>
+                <span class="location">北京.通州.果园</span>
+            </li>
+            <li class="main-box">
+                <span class="date">服务日期</span>
+                <div class="main-div">
+                    <span class="left">2018-6-12至2018-3-22</span>
+                    <span class="right getback">25元/小时</span>
+                </div>
+                <span class="location">北京.通州.果园</span>
+            </li>
+            <li class="main-box">
+                <span class="date">服务日期</span>
+                <div class="main-div">
+                    <span class="left">2018-6-12至2018-3-22</span>
+                    <span class="right getback">25元/小时</span>
+                </div>
+                <span class="location">北京.通州.果园</span>
+            </li>
+            <li class="main-box">
+                <span class="date">服务日期</span>
+                <div class="main-div">
+                    <span class="left">2018-6-12至2018-3-22</span>
+                    <span class="right getback">25元/小时</span>
+                </div>
+                <span class="location">北京.通州.果园</span>
+            </li>
+        </ul>
+    </main>
+    <footer>
+        <a href="www.xxx.com">
+            <button type="button" class="footer-left">
+                <span class="font-left">首页</span>
+            </button>
+        </a>
+        <a href="www.xxx.com">
+            <button type="button" class="footer-center">
+                <span class="content-center"></span>
+            </button>
+        </a>
+        <a href="www.xxx.com">
+            <button type="button" class="footer-right">
+                <span class="font-right">我的</span>
+            </button>
+        </a>
+    </footer>
+
 </body>
 </html>
