--- a/homepage.html
+++ b/homepage.html
@@ -13,6 +13,7 @@
     <a href="https://zn724761135.github.io/css/css3/css3">CSS3</a>
     <a href="https://zn724761135.github.io/css/css4/css4">CSS4</a>
     <a href="https://zn724761135.github.io/css/css5/css5">CSS5</a>
+    <a href="https://zn724761135.github.io/css/css6/css6">CSS6</a>
 </body>
 
 </html>
