--- a/css7/css7-1.html
+++ b/css7/css7-1.html
@@ -5,123 +5,7 @@
     <meta name="viewport" content="width=device-width; initial-scale=1.0;minimum-scale=1.0; 
     maximum-scale=1.0; user-scalable=no;">
     <title>捉鬼游戏</title>
-    <style pyte="txet/css">
-    html{
-        font-size:312.5%;
-    }
-    body{
-        margin: 0;
-        font-size:initial;
-    }
-    p,ul,li{
-        padding: 0;
-        margin: 0;
-        list-style: none;
-    }
-
-    /* header眉页 */
-
-    header{
-        height:.9rem;
-        background: #29BDE0;
-    }
-    .left-box{
-        width: 1rem;
-        border:none;
-        background: #29BDE0;
-        margin: .3rem 0 0 .22rem;
-        outline:none;
-        
-    }
-    .left{
-        width:.34rem;
-        margin: .08rem;
-        border: .02rem solid #FFFFFF;
-    }
-
-    /* main主体 */
-    .main-box{
-        margin: .27rem .36rem;
-        border: solid .01rem #C9C9C9;
-        background: #FFFFFF;
-        line-height: 1.16rem;
-        text-align:center;
-        font-size: .35rem;
-        color: #9A9A9A
-    }
-    .arrows::after{
-        display: inline-block;
-        float: right;
-        content: "";
-        width: .24rem;
-        height:.24rem;
-        margin: .42rem .2rem 0 -.5rem;
-        border-top:.05rem solid #E7E7E7;
-        border-right: .05rem solid #E7E7E7;
-        transform: rotate(45deg);
-    }
-
-    /* footer尾页 */
-    .footer-box{
-        height: 8rem;
-        margin: 0 .35rem;
-        border: solid .01rem #C9C9C9;
-        background: #FFFFFF;
-        text-align: center;
-    }
-    .top-box{
-        border-bottom: .01rem solid #FBB435;
-        line-height: .9rem;
-        text-align: center;
-        font-size: .38rem;
-        /* 字符间距 */
-        letter-spacing: .03rem;
-        color: #FBB435;
-    }
-    .content-box{
-        display: inline-block;
-        width: 4.63rem;
-        margin-top: .27rem;
-        background: #69D1E9;
-        line-height:1.34rem;
-        font-size:.32rem;
-        letter-spacing: .04rem;
-        color: #FFFFFF;
-    }
-    .font{
-        margin-top: .27rem;
-        font-size: .25rem;
-        color: #787878;
-    }
-    .sjx::after{
-        display: inline-block;
-        content: "";
-        float: right;
-        border: solid 0.3rem;
-        border-color:transparent transparent transparent #FBB435;
-        margin: .7rem -.2rem 0 -1rem;
-    }
-    .bottom-box{
-        display:flex;
-        justify-content: space-between;
-        width: .98rem;
-        margin: auto;
-        margin-top: .14rem;
-        text-align: center;
-    }
-    .blue{
-        width: .17rem;
-        height: .17rem;
-        border-radius: 1000%;
-        background: #69D1E9;
-    }
-    .grey{
-        width: .17rem;
-        height: .17rem;
-        border-radius: 1000%;
-        background: #F0F0F0;
-    }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css7-1.css">
 </head>
 <body>
     <header>
