--- a/css7/1.html
+++ b/css7/1.html
@@ -125,7 +125,7 @@
 </head>
 <body>
     <header>
-        <button class="left-box" type="button">
+        <button class="left-box" type="button" onclick="location.href='www.xxxx.com'">
             <p class="left"></p>
             <p class="left"></p>
             <p class="left"></p>
