--- a/css7/css7-1.html
+++ b/css7/css7-1.html
@@ -24,15 +24,15 @@
         <ul class="footer-box">
             <li class="top-box">捉鬼游戏</li>
             <li>
-                <a  class="content-box">简化版</a>
+                <a href="css7-2.html" class="content-box">简化版</a>
             </li>
             <li class="font">有1133个用户正在玩此游戏</li>
             <li class="sjx">
-                <a  class="content-box">猜词版</a>
+                <a href="css7-2.html" class="content-box">猜词版</a>
             </li>
             <li class="font">有1133个用户正在玩此游戏</li>
             <li>
-                <a  class="content-box">白痴版</a>
+                <a href="css7-2.html" class="content-box">白痴版</a>
             </li>
             <li class="font">有1133个用户正在玩此游戏</li>
             <li>
