--- a/css7/css7-2.html
+++ b/css7/css7-2.html
@@ -204,7 +204,7 @@
 </head>
 <body>
     <header>
-        <a>
+        <a href="css7-1.html">
             <ul class="left-header-box">
                 <li class="left-header-content"></li>
                 <li class="left-header-content"></li>
@@ -212,7 +212,7 @@
             </ul>
         </a>
         <span>投票</span>
-        <a class="left-header"></a>
+        <a href="css7-3.html" class="left-header"></a>
     </header>
     <main>
         <div class="top-box">
@@ -353,7 +353,7 @@
         </ul>
     </main>
     <footer>
-        <button class="button-box" type="button">投死</button>
+        <button class="button-box" type="button" onclick="location.href='css7-3.html'">投死</button>
     </footer>
 </body>
 </html>
