--- a/css7/1.html
+++ b/css7/1.html
@@ -86,6 +86,7 @@
         line-height:1.34rem;
         font-size:.32rem;
         letter-spacing: .04rem;
+        text-decoration:none;
         color: #FFFFFF;
     }
     .font{
@@ -125,7 +126,7 @@
 </head>
 <body>
     <header>
-        <button class="left-box" type="button" onclick="location.href='www.xxxx.com'">
+        <button class="left-box" type="button">
             <p class="left"></p>
             <p class="left"></p>
             <p class="left"></p>
@@ -140,15 +141,15 @@
         <ul class="footer-box">
             <li class="top-box">捉鬼游戏</li>
             <li>
-                <a  class="content-box">简化版</a>
+                <a href="2.html" class="content-box">简化版</a>
             </li>
             <li class="font">有1133个用户正在玩此游戏</li>
             <li class="sjx">
-                <a  class="content-box">猜词版</a>
+                <a href="2.html" class="content-box">猜词版</a>
             </li>
             <li class="font">有1133个用户正在玩此游戏</li>
             <li>
-                <a  class="content-box">白痴版</a>
+                <a href="2.html" class="content-box">白痴版</a>
             </li>
             <li class="font">有1133个用户正在玩此游戏</li>
             <li>
