--- a/css7/css7-3.html
+++ b/css7/css7-3.html
@@ -60,8 +60,8 @@
         </ul>
     </main>
     <footer>
-        <button type="button" class="left-button">再来一局</button>
-        <button type="button" class="right-button">上传并分享</button>
+        <button type="button" class="left-button" onclick="location.href='css7-1.html'">再来一局</button>
+        <button type="button" class="right-button" onclick="location.href='www.aaa.com'">上传并分享</button>
     </footer>
 </body>
 </html>
