--- a/css7/2.html
+++ b/css7/2.html
@@ -200,6 +200,10 @@
         letter-spacing: .15rem;
         color: #FFFFFF;
     }
+    .a{
+        width: 0;
+        height: 0;
+    }
     </style>
 </head>
 <body>
@@ -217,8 +221,7 @@
     <main>
         <div class="top-box">
             <p class="left-font">发言讨论结束，大家请投票</p>
-            <button type="button" class="right-circle">
-            </button>
+            <button type="button" class="right-circle"></button>
         </div>
         <p class="font">点击得票数最多人的头像</p>
         <ul>
